--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     compile('org.apache.mahout:mahout-core:0.9')
     compile('org.apache.spark:spark-mllib_2.10:1.0.0')
     compile('nz.ac.waikato.cms.weka:weka-stable:3.8.0')
+    compile('org.deeplearning4j:deeplearning4j-core:0.7.2')
+
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
