--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group = 'be.machinelearning.animalshelter'
+group = 'be.ml.animalshelter'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
@@ -31,10 +31,10 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.apache.mahout:mahout-core:0.9')
-    compile('org.apache.spark:spark-mllib_2.10:1.0.0')
+    compile('org.apache.spark:spark-mllib_2.10:2.2.0')
     compile('nz.ac.waikato.cms.weka:weka-stable:3.8.0')
     compile('org.deeplearning4j:deeplearning4j-core:0.7.2')
-
-
+    runtime('org.apache.hadoop:hadoop-hdfs:2.7.0')
+    runtime('org.apache.hadoop:hadoop-common:2.7.0')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
